--- a/src/WebApp/Pages/Shared/_Layout.cshtml
+++ b/src/WebApp/Pages/Shared/_Layout.cshtml
@@ -1,6 +1,5 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -11,50 +10,49 @@
 </head>
 
 <body>
-    <environment exclude="Production">
-        <div class="banner-test-site">
-            Test Site
-        </div>
-    </environment>
-    <a class="skip-nav shadow border border-info" href="#main-content">Skip to main content</a>
-
-    <header role="banner">
-        <div class="container h3 my-2">
-            <img src="~/images/epd-icon.svg" alt="Georgia EPD" class="img-logo" />
-            <a href="/" aria-label="Home" class="nav-link text-dark d-inline-block">MY_APP_NAME</a>
-        </div>
-        <partial name="_MenuPartial" />
-    </header>
-
-    <div class="container">
-        <main id="main-content" role="main" class="pb-3">
-            @RenderBody()
-        </main>
+<environment exclude="Production">
+    <div class="banner-test-site">
+        Test Site
     </div>
+</environment>
+<a class="skip-nav shadow border border-info" href="#main-content">Skip to main content</a>
 
-    <footer class="border-top footer text-muted">
-        <div class="bg-light d-print-none">
-            <div class="container">
-                <a href="#main-nav">↑ Return to top</a>
-            </div>
+<header role="banner">
+    <div class="container h3 my-2">
+        <img src="~/images/epd-icon.svg" alt="Georgia EPD" class="img-logo" />
+        <a href="/" aria-label="Home" class="nav-link text-dark d-inline-block">MY_APP_NAME</a>
+    </div>
+    <partial name="_MenuPartial" />
+</header>
+
+<div class="container">
+    <main id="main-content" role="main" class="pb-3">
+        @RenderBody()
+    </main>
+</div>
+
+<footer class="border-top footer text-muted">
+    <div class="bg-light d-print-none">
+        <div class="container">
+            <a href="#main-nav">↑ Return to top</a>
         </div>
-        <div class="bg-brand text-light">
-            <div class="container">
-                &copy; @DateTime.Now.Year State of Georgia
-                <span class="d-print-none">
-                    | <a href="https://georgia.gov/accessibility" target="_blank">Accessibility</a>
-                    | <a href="https://gadnr.org/ada" target="_blank">DNR Accessibility Notice</a>
-                    | <a href="https://georgia.gov/privacysecurity" target="_blank">Privacy/Security</a>
-                </span>
-            </div>
+    </div>
+    <div class="bg-brand text-light">
+        <div class="container">
+            &copy; @DateTime.Now.Year State of Georgia
+            <span class="d-print-none">
+                | <a href="https://georgia.gov/accessibility" target="_blank">Accessibility</a>
+                | <a href="https://gadnr.org/ada" target="_blank">DNR Accessibility Notice</a>
+                | <a href="https://georgia.gov/privacysecurity" target="_blank">Privacy/Security</a>
+            </span>
         </div>
-    </footer>
+    </div>
+</footer>
 
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
+<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+<script src="~/js/site.js" asp-append-version="true"></script>
 
-    @await RenderSectionAsync("Scripts", required: false)
+@await RenderSectionAsync("Scripts", false)
 </body>
-
 </html>
