--- a/src/WebApp/Pages/Account/Edit.cshtml
+++ b/src/WebApp/Pages/Account/Edit.cshtml
@@ -1,7 +1,7 @@
-﻿@page "{id:Guid?}"
+﻿@page
 @model Edit
 @{
-    ViewData["Title"] = "Edit User Profile";
+    ViewData["Title"] = "Edit Your Profile";
 }
 
 <h1>@ViewData["Title"]</h1>
@@ -12,7 +12,7 @@
 <div class="p-3 border rounded-3 bg-light mb-3">
     <form method="post">
         <div asp-validation-summary="ModelOnly" class="alert alert-danger" role="alert">
-            User update failed:
+            Update failed:
         </div>
         <div class="row">
             <div class="col-lg mb-3">
@@ -30,19 +30,17 @@
             </div>
             <div class="col-md mb-3">
                 <div class="form-floating">
+                    <select asp-for="UpdateStaff.OfficeId" asp-items="Model.OfficeItems" class="form-select"></select>
                     <label asp-for="UpdateStaff.OfficeId" class="form-label"></label>
                     <span asp-validation-for="UpdateStaff.OfficeId" class="text-danger"></span>
                 </div>
             </div>
         </div>
-        <div class="mb-3">
-            <input asp-for="UpdateStaff.Active" class="form-check-input" />
-            <label asp-for="UpdateStaff.Active" class="form-check-label"></label>
-        </div>
         <div class="mt-3">
             <input asp-for="UpdateStaff.Id" type="hidden" />
+            <input asp-for="UpdateStaff.Active" type="hidden" />
             <button type="submit" class="btn btn-primary col-sm-3 me-2">Update Info</button>
-            <a asp-page="Details" asp-route-id="@Model.UpdateStaff.Id" class="btn btn-outline-secondary col-md-2">Cancel</a>
+            <a asp-page="Index" class="btn btn-outline-secondary col-md-2">Cancel</a>
         </div>
         <div class="text-danger mt-3">* denotes a required field</div>
     </form>
