--- a/src/WebApp/Pages/Account/Index.cshtml
+++ b/src/WebApp/Pages/Account/Index.cshtml
@@ -22,7 +22,7 @@
 </dl>
 
 <div class="mb-3">
-    <a asp-page="./Edit" asp-route-id="@Model.DisplayStaff.Id" class="btn btn-outline-primary me-2">Edit Contact Info</a>
+    <a asp-page="./Edit" class="btn btn-outline-primary me-2">Edit Profile</a>
     <form class="form-inline d-inline-block" asp-page="./Logout" asp-route-returnUrl="@Url.Page("/")" method="post">
         <button type="submit" class="btn btn-danger">Sign out</button>
     </form>
