--- a/src/WebApp/Pages/Admin/Users/Details.cshtml
+++ b/src/WebApp/Pages/Admin/Users/Details.cshtml
@@ -1,4 +1,6 @@
 ﻿@page "{id:Guid?}"
+@using Microsoft.AspNetCore.Mvc.TagHelpers
+@using MyAppRoot.Domain.Identity
 @model Details
 @{
     ViewData["Title"] = "User Profile: " + Model.DisplayStaff.DisplayName;
@@ -11,17 +13,17 @@
 <h2>
     @if (!Model.DisplayStaff.Active)
     {
-        <em class="text-muted">Inactive:</em>
+        <em class="text-warning">Inactive:</em>
     }
     @Model.DisplayStaff.DisplayName
 </h2>
 
-@* @if (User.IsInRole(AppRole.UserAdmin)) *@
-@* { *@
-<p>
-    <a asp-page="./Edit" asp-route-id="@Model.DisplayStaff.Id" class="btn btn-outline-primary btn-sm">Edit Contact Info</a>
-</p>
-@* } *@
+@if (User.IsInRole(AppRole.UserAdmin))
+{
+    <p>
+        <a asp-page="./Edit" asp-route-id="@Model.DisplayStaff.Id" class="btn btn-outline-primary btn-sm">Edit Profile</a>
+    </p>
+}
 
 <dl class="row">
     <dt class="col-sm-3">Email</dt>
@@ -37,12 +39,12 @@
 
 <h3>Roles</h3>
 
-@* @if (User.IsInRole(AppRole.UserAdmin)) *@
-@* { *@
-<p>
-    <a asp-page="./EditRoles" asp-route-id="@Model.DisplayStaff.Id" class="btn btn-outline-primary btn-sm">Edit User Roles</a>
-</p>
-@* } *@
+@if (User.IsInRole(AppRole.UserAdmin))
+{
+    <p>
+        <a asp-page="./EditRoles" asp-route-id="@Model.DisplayStaff.Id" class="btn btn-outline-primary btn-sm">Edit User Roles</a>
+    </p>
+}
 
 @if (Model.Roles.Count == 0)
 {
