--- a/src/WebApp/Pages/Admin/Users/Index.cshtml
+++ b/src/WebApp/Pages/Admin/Users/Index.cshtml
@@ -50,7 +50,7 @@
         </div>
         <div class="mt-3 mb-1">
             <input type="hidden" name="handler" value="search" />
-            <button id="SearchButton" type="submit" class="btn btn-primary col-sm-3">Search</button>
+            <button id="SearchButton" type="submit" class="btn btn-primary col-sm-3 me-2">Search</button>
             <a asp-page="./Index" class="btn btn-outline-secondary col-sm-3 col-md-2">Clear Form</a>
         </div>
     </form>
@@ -78,7 +78,7 @@
                     <td>
                         @if (item.Email.Equals(User.Identity?.Name))
                         {
-                            <span class="badge badge-primary">YOU</span>
+                            <span class="badge bg-secondary">YOU</span>
                         }
                         <a asp-page="./Details" asp-route-id="@item.Id">@item.DisplayName</a>
                     </td>
