--- a/src/WebApp/Pages/Index.cshtml
+++ b/src/WebApp/Pages/Index.cshtml
@@ -17,7 +17,7 @@
                 <a asp-page="/Account/Login">Login Page</a>
             </li>
             <li>
-                <a asp-page="/Admin/Users/Index">Users</a>
+                <a asp-page="/Admin/Users/Index">User Accounts</a>
             </li>
         </ul>
     </div>
