Standardize naming of Razor page models

--- a/src/WebApp/Pages/Admin/Users/Details.cshtml
+++ b/src/WebApp/Pages/Admin/Users/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@page "{id:Guid?}"
 @using Microsoft.AspNetCore.Mvc.TagHelpers
 @using MyAppRoot.Domain.Identity
-@model Details
+@model DetailsModel
 @{
     ViewData["Title"] = "User Profile: " + Model.DisplayStaff.DisplayName;
 }
