--- a/src/WebApp/Pages/Admin/Users/Index.cshtml
+++ b/src/WebApp/Pages/Admin/Users/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@page
 @using MyAppRoot.AppServices.StaffServices
-@model MyAppRoot.WebApp.Pages.Admin.Users.IndexModel
+@model IndexModel
 @{
     ViewData["Title"] = "User Search";
 }
