--- a/src/WebApp/Pages/Admin/Users/Index.cshtml
+++ b/src/WebApp/Pages/Admin/Users/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@using MyAppRoot.AppServices.StaffServices
+@using MyAppRoot.AppServices.Staff
 @model IndexModel
 @{
     ViewData["Title"] = "User Search";
