--- a/src/WebApp/Pages/Admin/Users/Edit.cshtml
+++ b/src/WebApp/Pages/Admin/Users/Edit.cshtml
@@ -30,6 +30,7 @@
             </div>
             <div class="col-md mb-3">
                 <div class="form-floating">
+                    <select asp-for="UpdateStaff.OfficeId" asp-items="Model.OfficeItems" class="form-select"></select>
                     <label asp-for="UpdateStaff.OfficeId" class="form-label"></label>
                     <span asp-validation-for="UpdateStaff.OfficeId" class="text-danger"></span>
                 </div>
