Create Office maintenance pages

--- a/src/WebApp/Pages/Index.cshtml
+++ b/src/WebApp/Pages/Index.cshtml
@@ -11,13 +11,16 @@
     <div class="card-body">
         <ul>
             <li>
-                <a asp-page="/Account/Index">Account Page</a>
-            </li>
-            <li>
                 <a asp-page="/Account/Login">Login Page</a>
             </li>
             <li>
-                <a asp-page="/Admin/Users/Index">User Accounts</a>
+                <a asp-page="/Account/Index">Account Page</a>
+            </li>
+            <li>
+                <a asp-page="/Admin/Users/Index">All Users</a>
+            </li>
+            <li>
+                <a asp-page="/Admin/Maintenance/Index">Site Maintenance</a>
             </li>
         </ul>
     </div>
