Fix Raygun API key references
roslyn:CS8618

https://sonarcloud.io/project/issues?issues=AYOPLcrw6fAM2Ks8SmFv&open=AYOPLcrw6fAM2Ks8SmFv&id=gaepdit_template-app

--- a/src/WebApp/Pages/Shared/_RaygunScriptsPartial.cshtml
+++ b/src/WebApp/Pages/Shared/_RaygunScriptsPartial.cshtml
@@ -1,8 +1,7 @@
 ﻿@using MyAppRoot.WebApp.Platform.Settings
-@inject IConfiguration Configuration
 @inject IHttpContextAccessor ContextAccessor
 @{
-    var apiKey = Configuration[$"{nameof(ApplicationSettings.RaygunSettings)}:ApiKey"];
+    var apiKey = ApplicationSettings.RaygunSettings.ApiKey;
     if (string.IsNullOrEmpty(apiKey)) return;
     var identity = ContextAccessor.HttpContext?.User.Identity;
     var environment = Environment.GetEnvironmentVariable("ASPNETCORE_ENVIRONMENT") ?? "unknown";
