Add Swagger API documentation

--- a/src/WebApp/Pages/Index.cshtml
+++ b/src/WebApp/Pages/Index.cshtml
@@ -22,6 +22,9 @@
             <li>
                 <a asp-page="/Admin/Maintenance/Index">Site Maintenance</a>
             </li>
+            <li>
+                <a href="/api-docs">API Docs</a>
+            </li>
         </ul>
     </div>
 </div>
