Add search form scripts and form validation scripts
ref #40

--- a/src/WebApp/Pages/Admin/Maintenance/Offices/Edit.cshtml
+++ b/src/WebApp/Pages/Admin/Maintenance/Offices/Edit.cshtml
@@ -33,7 +33,7 @@
     </form>
 </div>
 
-@* @section ScriptFiles *@
-@* { *@
-@*     <script src="~/dist/formValidation.bundle.js" asp-append-version="true" defer></script> *@
-@* } *@
+@section Scripts
+{
+    <partial name="_ValidationScriptsPartial" />
+}
