--- a/src/WebApp/Pages/Admin/Users/Edit.cshtml
+++ b/src/WebApp/Pages/Admin/Users/Edit.cshtml
@@ -48,3 +48,8 @@
         <div class="text-danger mt-3">* denotes a required field</div>
     </form>
 </div>
+
+@section Scripts
+{
+    <partial name="_ValidationScriptsPartial" />
+}
