--- a/src/WebApp/Pages/Admin/Maintenance/Offices/Add.cshtml
+++ b/src/WebApp/Pages/Admin/Maintenance/Offices/Add.cshtml
@@ -26,7 +26,7 @@
     </form>
 </div>
 
-@* @section ScriptFiles *@
-@* { *@
-@*     <script src="~/dist/formValidation.bundle.js" asp-append-version="true" defer></script> *@
-@* } *@
+@section Scripts
+{
+    <partial name="_ValidationScriptsPartial" />
+}
