--- a/src/WebApp/Pages/Admin/Users/Index.cshtml
+++ b/src/WebApp/Pages/Admin/Users/Index.cshtml
@@ -103,6 +103,6 @@
     }
 }
 
-@* @section ScriptFiles { *@
-@* <script src="~/dist/formSearch.bundle.js" asp-append-version="true" type="text/javascript" defer></script> *@
-@* } *@
+@section Scripts {
+    <script src="~/js/formSearch.js"></script>
+}
