Add a "noopener" relationship to external links
https://sonarcloud.io/project/security_hotspots?id=gaepdit_template-app&hotspots=AYOOapOLOcRgZxn9kw2i

--- a/src/WebApp/Pages/Shared/_Layout.cshtml
+++ b/src/WebApp/Pages/Shared/_Layout.cshtml
@@ -42,9 +42,9 @@
         <div class="container">
             &copy; @DateTime.Now.Year State of Georgia
             <span class="d-print-none">
-                | <a href="https://georgia.gov/accessibility" target="_blank">Accessibility</a>
-                | <a href="https://gadnr.org/ada" target="_blank">DNR Accessibility Notice</a>
-                | <a href="https://georgia.gov/privacysecurity" target="_blank">Privacy/Security</a>
+                | <a href="https://georgia.gov/accessibility" target="_blank" rel="noopener">Accessibility</a>
+                | <a href="https://gadnr.org/ada" target="_blank" rel="noopener">DNR Accessibility Notice</a>
+                | <a href="https://georgia.gov/privacysecurity" target="_blank" rel="noopener">Privacy/Security</a>
             </span>
         </div>
     </div>
