Enable publishing to a subfolder in IIS
Change some absolute URLs into relative URLs.

--- a/src/WebApp/Pages/Account/Index.cshtml
+++ b/src/WebApp/Pages/Account/Index.cshtml
@@ -23,7 +23,7 @@
 
 <div class="mb-3">
     <a asp-page="./Edit" class="btn btn-outline-primary me-2">Edit Profile</a>
-    <form class="form-inline d-inline-block" asp-page="./Logout" asp-route-returnUrl="@Url.Page("/")" method="post">
+    <form class="form-inline d-inline-block" asp-page="./Logout" method="post">
         <button type="submit" class="btn btn-danger">Sign out</button>
     </form>
 </div>
