--- a/src/WebApp/Pages/Index.cshtml
+++ b/src/WebApp/Pages/Index.cshtml
@@ -11,9 +11,6 @@
     <div class="card-body">
         <ul>
             <li>
-                <a asp-page="/Account/Login">Login Page</a>
-            </li>
-            <li>
                 <a asp-page="/Account/Index">Account Page</a>
             </li>
             <li>
@@ -23,7 +20,7 @@
                 <a asp-page="/Admin/Maintenance/Index">Site Maintenance</a>
             </li>
             <li>
-                <a href="/api-docs">API Docs</a>
+                <a href="api-docs/">API Docs</a>
             </li>
         </ul>
     </div>
