--- a/src/WebApp/Pages/Shared/_MenuPartial.cshtml
+++ b/src/WebApp/Pages/Shared/_MenuPartial.cshtml
@@ -26,12 +26,19 @@
                             </form>
                         </div>
                     </li>
+                    <input type="checkbox" id="dark-mode-toggle" class="input-light-switch"/>
+                    <label for="dark-mode-toggle" class="label-light-switch">
+                    </label>
                 }
                 else
                 {
                     <li class="nav-item">
                         <a class="nav-link text-white" asp-page="/Account/Login">Sign in</a>
                     </li>
+                    <div class="form-check form-switch">
+                        <label class="form-check-label" for="lightSwitch"> Dark Mode </label>
+                        <input class="form-check-input" type="checkbox" id="lightSwitch" />
+                    </div>
                 }
             </ul>
         </div>
