--- a/src/WebApp/Pages/Shared/_Layout.cshtml
+++ b/src/WebApp/Pages/Shared/_Layout.cshtml
@@ -53,6 +53,7 @@
 <script src="~/lib/jquery/jquery.min.js"></script>
 <script src="~/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
 <script src="~/js/site.js"></script>
+<script src="~/js/lightSwitch.js"></script>
 @await RenderSectionAsync("Scripts", false)
 </body>
 </html>
