--- a/src/WebApp/wwwroot/css/site.css
+++ b/src/WebApp/wwwroot/css/site.css
@@ -253,67 +253,20 @@ a[target]::after {
 
 /* Dark Mode toggle styles
 -------------------------------------------------- */
-.label-light-switch {
-    width:50px;
-    height:20px;
-    position: relative;
-    display: block;
-    background: #ebebeb;
-    border-radius: 20px;
-    box-shadow: inset 0px 0px 1px rgba(0,0,0,0.4), inset 0px -0px 1px rgba(255,255,255,0.4);
-    cursor: pointer;
-    transition: 0.3s;
+#lightSwitch {
+    transform: scale(1.6);
 }
-.label-light-switch:after {
-    content: "";
-    width:18px;
-    height: 18px;
-    position: absolute;
-    top: 1px;
-    left: 1px;
-    background: linear-gradient(180deg,#ffcc89,#d8860b);
-    border-radius: 18px;
-    box-shadow: 0px 0px 1px rgba(0,0,0,0.2);
-    transition: 0.3s;
+
+.custom-theme.bg-light {
+    background-color: darkslategray !important;
+    border-radius: 3px;
+    color: gainsboro;
+    text-decoration: underline;
 }
-.input-light-switch {
-    width: 0;
-    height: 0;
-    visibility: hidden;
-}
-.input-light-switch:checked + .label-light-switch {
-    background: #242424;
-}
-.input-light-switch:checked + .label-light-switch:after {
-    left:49px;
-    transform: translateX(-100%);
-    background: linear-gradient(180deg,#777,#3a3a3a);
-}
-.label-light-switch:active:after{
-    width: 26px;
-}
-.input-light-switch:checked + .label-light-switch {
-    background:#242424;
-}
-.label-light-switch img {
-    position: absolute;
-    width: 12px;
-    top:4px;
-    z-index: 100;
-}
-.label-light-switch img.sun {
-    left:4px;
-    fill:#fff;
-    transition: 0.3s;
-}
-.label-light-switch img.moon {
-    left:34px;
-    fill:#7e7e7e;
-    transition: 0.3s;
-}
-.input-light-switch:checked + .label-light-switch img.sun {
-    fill:#7e7e7e;
-}
-.input-light-switch:checked + .label-light-switch img.moon {
-    fill:#fff;
+
+.custom-theme.bg-dark {
+    background-color: blanchedalmond !important;
+    box-shadow: 10px 5px 5px rgba(246, 255, 219, 0.5);
+    color: dimgray;
+    text-decoration: overline;
 }
