got everything almost working

--- a/src/WebApp/Pages/Shared/_MenuPartial.cshtml
+++ b/src/WebApp/Pages/Shared/_MenuPartial.cshtml
@@ -38,7 +38,7 @@
                             Account
                         </a>
                         <div class="dropdown-menu dropdown-menu-end" aria-labelledby="accountDropdownMenuLink">
-                            <a class="nav-link text-dark dropdown-item" asp-page="/Account/Index">Your profile</a>
+                            <a class="nav-link dropdown-item text-dark" asp-page="/Account/Index">Your profile</a>
                             <hr class="dropdown-divider">
                             <form class="form-inline py-0 px-2" asp-page="/Account/Logout" method="post">
                                 <button type="submit" class="btn btn-outline-danger d-block w-100 px-4 py-2">Sign out</button>
