got all text elements working as intended

--- a/src/WebApp/Pages/Shared/_MenuPartial.cshtml
+++ b/src/WebApp/Pages/Shared/_MenuPartial.cshtml
@@ -32,13 +32,13 @@
             <ul class="navbar-nav">
                 @if (User.Identity?.IsAuthenticated ?? false)
                 {
-                    <li class="nav-item dropdown text-white">
-                        <a class="nav-link dropdown-toggle text-white" href="#" id="accountDropdownMenuLink" role="button"
+                    <li class="nav-item dropdown text-light">
+                        <a class="nav-link dropdown-toggle text-light" href="#" id="accountDropdownMenuLink" role="button"
                            data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" title="View account menu">
                             Account
                         </a>
                         <div class="dropdown-menu dropdown-menu-end" aria-labelledby="accountDropdownMenuLink">
-                            <a class="nav-link dropdown-item text-dark" asp-page="/Account/Index">Your profile</a>
+                            <a class="nav-link dropdown-item" asp-page="/Account/Index">Your profile</a>
                             <hr class="dropdown-divider">
                             <form class="form-inline py-0 px-2" asp-page="/Account/Logout" method="post">
                                 <button type="submit" class="btn btn-outline-danger d-block w-100 px-4 py-2">Sign out</button>
