--- a/src/WebApp/Pages/Shared/_Layout.cshtml
+++ b/src/WebApp/Pages/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
 <header role="banner">
     <div class="container h3 my-2">
         <img src="~/images/epd-icon.svg" alt="Georgia EPD" class="img-logo" />
-        <a href="/" aria-label="Home" class="nav-link text-dark d-inline-block">MY_APP_NAME</a>
+        <a href="/" aria-label="Home" class="nav-link d-inline-block">MY_APP_NAME</a>
     </div>
     <partial name="_MenuPartial" />
 </header>
