Fix anchor hover style

--- a/src/WebApp/wwwroot/css/site.css
+++ b/src/WebApp/wwwroot/css/site.css
@@ -257,6 +257,6 @@ a[target]::after {
     transition: all .25s linear;
 }
 
-*.hover > .anchorjs-link {
+*:hover > .anchorjs-link {
     margin-left: -1.125em !important;
 }
