--- a/src/WebApp/Pages/Error.cshtml
+++ b/src/WebApp/Pages/Error.cshtml
@@ -1,26 +1,34 @@
-﻿@page
+﻿@page "{statusCode:int?}"
 @model ErrorModel
-@{
-    ViewData["Title"] = "Error";
+@switch (Model.Status)
+{
+    case StatusCodes.Status404NotFound:
+    {
+        ViewData["Title"] = "Not Found";
+        <h1 class="text-danger">@ViewData["Title"]</h1>
+        <p class="lead">The page you're looking for could not be found.</p>
+        break;
+    }
+    default:
+    {
+        ViewData["Title"] = "Error";
+        <h1 class="text-danger">@ViewData["Title"]</h1>
+        <p class="lead">An error occurred while processing your request.</p>
+        break;
+    }
 }
 
-<h1 class="text-danger">Error.</h1>
-<h2 class="text-danger">An error occurred while processing your request.</h2>
-
-@if (Model.ShowRequestId)
+@if (User.Identity?.IsAuthenticated ?? false)
 {
     <p>
-        <strong>Request ID:</strong> <code>@Model.RequestId</code>
+        If you need assistance related to this error, please
+        <a href="https://gaepd.zendesk.com/">contact EPD IT support</a>.
     </p>
 }
-
-<h3>Development Mode</h3>
-<p>
-    Swapping to the <strong>Development</strong> environment displays detailed information about the error that occurred.
-</p>
-<p>
-    <strong>The Development environment shouldn't be enabled for deployed applications.</strong>
-    It can result in displaying sensitive information from exceptions to end users.
-    For local debugging, enable the <strong>Development</strong> environment by setting the <strong>ASPNETCORE_ENVIRONMENT</strong> environment variable to <strong>Development</strong>
-    and restarting the app.
-</p>
+else
+{
+    <p>
+        If you need assistance related to this error, please
+        <a href="mailto:support@gaepd.zendesk.com">contact EPD IT support</a>.
+    </p>
+}
