--- a/src/WebApp/wwwroot/css/site.css
+++ b/src/WebApp/wwwroot/css/site.css
@@ -67,23 +67,13 @@ body {
     line-height: 60px; /* Vertically center the text there */
 }
 
-/* Fix missing :focus styles
--------------------------------------------------- */
-a:focus {
-    color: #0056b3;
-}
-
-a:focus:not(.btn) {
-    text-decoration: underline;
-}
-
 /* Header and nav bar
 -------------------------------------------------- */
 .img-logo {
     height: 60px;
 }
 
-.nav-link:hover, .nav-link:focus {
+.nav-link:hover {
     text-decoration: underline;
 }
 
@@ -181,15 +171,12 @@ a[target]::after {
 -------------------------------------------------- */
 .anchorjs-link {
     transition: all .25s linear;
-}
-
-*:hover > .anchorjs-link {
-    margin-left: -1.125em !important;
-}
-
-.anchorjs-link:focus {
     /* See https://github.com/bryanbraun/anchorjs/pull/192 */
-    margin-left: -1.375em !important;
+    margin-left: -1.25em !important;
     padding-left: .25em;
     padding-right: .25em !important;
+}
+
+*:hover > .anchorjs-link, .anchorjs-link:focus-visible {
+    margin-left: -1.375em !important;
 }
