--- a/src/WebApp/Pages/Account/ExternalLogin.cshtml
+++ b/src/WebApp/Pages/Account/ExternalLogin.cshtml
@@ -1,16 +1,16 @@
-@page
+﻿@page
 @model ExternalLoginModel
 @{
     ViewData["Title"] = "Account Error";
 }
 
 <h1 class="text-danger">@ViewData["Title"]</h1>
-<p class="text-danger">
-    There was an error creating your account.If you need assistance related to this error,
+<p>
+    There was an error creating your account. If you need assistance related to this error,
     please contact EPD IT support.
 </p>
 
-<div asp-validation-summary="ModelOnly" class="usa-alert usa-alert-error" role="alert"></div>
+<div asp-validation-summary="ModelOnly"></div>
 
 @if (Model.DisplayFailedUser is not null)
 {
@@ -18,10 +18,10 @@
         <p>Data received from work account (for diagnostic purposes):</p>
         <dl class="row">
             <dt class="col-sm-3">@Html.DisplayNameFor(m => Model.DisplayFailedUser.Email)</dt>
-            <dd class="col-sm-9">@Html.DisplayFor(m => Model.DisplayFailedUser.Email)</dd>
+            <dd class="col-sm-9">@Html.DisplayFor(m => Model.DisplayFailedUser.Email, "StringOrNone")</dd>
 
             <dt class="col-sm-3">@Html.DisplayNameFor(m => Model.DisplayFailedUser.UserName)</dt>
-            <dd class="col-sm-9">@Html.DisplayFor(m => Model.DisplayFailedUser.UserName)</dd>
+            <dd class="col-sm-9">@Html.DisplayFor(m => Model.DisplayFailedUser.UserName, "StringOrNone")</dd>
 
             <dt class="col-sm-3">@Html.DisplayNameFor(m => Model.DisplayFailedUser.Active)</dt>
             <dd class="col-sm-9">@Html.DisplayFor(m => Model.DisplayFailedUser.Active)</dd>
