--- a/src/WebApp/Pages/Shared/_MenuPartial.cshtml
+++ b/src/WebApp/Pages/Shared/_MenuPartial.cshtml
@@ -1,10 +1,10 @@
-<nav id="main-nav" class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-brand border-bottom shadow-sm mb-3 d-print-none">
+<nav id="main-nav" class="navbar navbar-expand-sm navbar-dark bg-brand border-bottom shadow-sm mb-3 d-print-none">
     <div class="container">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main-nav-content"
+                aria-controls="main-nav-content" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span> <span class="align-middle">Menu</span>
         </button>
-        <div class="navbar-collapse collapse d-sm-inline-flex">
+        <div class="navbar-collapse collapse d-sm-inline-flex" id="main-nav-content">
             <ul class="navbar-nav flex-grow-1 mr-auto">
                 <li class="nav-item">
                     <a class="nav-link text-white" asp-page="/Index">Home</a>
