Add Azure AD Object ID to app user profile

--- a/src/WebApp/Pages/Account/ExternalLogin.cshtml
+++ b/src/WebApp/Pages/Account/ExternalLogin.cshtml
@@ -23,14 +23,14 @@
             <dt class="col-sm-3">@Html.DisplayNameFor(m => Model.DisplayFailedUser.UserName)</dt>
             <dd class="col-sm-9">@Html.DisplayFor(m => Model.DisplayFailedUser.UserName, "StringOrNone")</dd>
 
-            <dt class="col-sm-3">@Html.DisplayNameFor(m => Model.DisplayFailedUser.Active)</dt>
-            <dd class="col-sm-9">@Html.DisplayFor(m => Model.DisplayFailedUser.Active)</dd>
-
             <dt class="col-sm-3">@Html.DisplayNameFor(m => Model.DisplayFailedUser.FamilyName)</dt>
             <dd class="col-sm-9">@Html.DisplayFor(m => Model.DisplayFailedUser.FamilyName, "StringOrNone")</dd>
 
             <dt class="col-sm-3">@Html.DisplayNameFor(m => Model.DisplayFailedUser.GivenName)</dt>
             <dd class="col-sm-9">@Html.DisplayFor(m => Model.DisplayFailedUser.GivenName, "StringOrNone")</dd>
+
+            <dt class="col-sm-3">@Html.DisplayNameFor(m => Model.DisplayFailedUser.AzureAdObjectId)</dt>
+            <dd class="col-sm-9">@Html.DisplayFor(m => Model.DisplayFailedUser.AzureAdObjectId, "StringOrNone")</dd>
         </dl>
     </div>
 }
