change classes to be color-mode compatible

--- a/src/WebApp/Pages/Account/Index.cshtml
+++ b/src/WebApp/Pages/Account/Index.cshtml
@@ -38,7 +38,7 @@ else
 {
     <p>Your account has the following application roles.</p>
 
-    <dl class="p-3 border rounded-3 bg-light">
+    <dl class="p-3 border rounded-3 bg-light-subtle">
         @foreach (var role in Model.Roles)
         {
             <dt>@role.DisplayName</dt>
