--- a/src/WebApp/Pages/Admin/Users/Index.cshtml
+++ b/src/WebApp/Pages/Admin/Users/Index.cshtml
@@ -7,7 +7,7 @@
 
 <h1>@ViewData["Title"]</h1>
 
-<div class="p-3 rounded-3 bg-light">
+<div class="p-3 rounded-3 bg-light-subtle">
     <form method="get" asp-fragment="SearchResults">
         <div class="row">
             <div class="col-md mb-3">
