--- a/src/WebApp/Pages/Shared/_Layout.cshtml
+++ b/src/WebApp/Pages/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
 </div>
 
 <footer class="border-top footer text-muted">
-    <div class="bg-light d-print-none">
+    <div class="bg-light-subtle d-print-none">
         <div class="container">
             <a href="#main-nav">↑ Return to top</a>
         </div>
