--- a/src/WebApp/Pages/Shared/_MenuPartial.cshtml
+++ b/src/WebApp/Pages/Shared/_MenuPartial.cshtml
@@ -14,14 +14,14 @@
             <ul class="navbar-nav">
                 @if (User.Identity?.IsAuthenticated ?? false)
                 {
-                    <li class="nav-item dropdown text-light">
-                        <a class="nav-link dropdown-toggle text-light" href="#" id="accountDropdownMenuLink" role="button"
+                    <li class="nav-item dropdown bs-light-text">
+                        <a class="nav-link dropdown-toggle text-white" href="#" id="accountDropdownMenuLink" role="button"
                            data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" title="View account menu">
                             Account
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="accountDropdownMenuLink">
                             <li>
-                                <a class="dropdown-item text-dark" asp-page="/Account/Index">Your profile</a>
+                                <a class="dropdown-item text-dark-emphasis" asp-page="/Account/Index">Your profile</a>
                             </li>
                             <li>
                                 <hr class="dropdown-divider">
