--- a/src/WebApp/Pages/Account/Edit.cshtml
+++ b/src/WebApp/Pages/Account/Edit.cshtml
@@ -9,7 +9,7 @@
 
 <h2>@Model.DisplayStaff.DisplayName</h2>
 
-<div class="p-3 border rounded-3 bg-light mb-3">
+<div class="p-3 border rounded-3 bg-light-subtle mb-3">
     <form method="post">
         <div asp-validation-summary="ModelOnly" class="alert alert-danger" role="alert">
             Update failed:
