--- a/src/WebApp/Pages/Account/ExternalLogin.cshtml
+++ b/src/WebApp/Pages/Account/ExternalLogin.cshtml
@@ -14,7 +14,7 @@
 
 @if (Model.DisplayFailedUser is not null)
 {
-    <div class="p-3 border rounded-3 bg-light">
+    <div class="p-3 border rounded-3 bg-light-subtle">
         <p>Data received from work account (for diagnostic purposes):</p>
         <dl class="row">
             <dt class="col-sm-3">@Html.DisplayNameFor(m => Model.DisplayFailedUser.Email)</dt>
