--- a/src/WebApp/Pages/Admin/Maintenance/Offices/Add.cshtml
+++ b/src/WebApp/Pages/Admin/Maintenance/Offices/Add.cshtml
@@ -6,7 +6,7 @@
 
 <h1>@ViewData["Title"]</h1>
 
-<div class="p-3 border rounded-3 bg-light">
+<div class="p-3 border rounded-3 bg-light-subtle">
     <form method="post">
         <div asp-validation-summary="ModelOnly" class="alert alert-danger" role="alert"></div>
         <div class="row">
