--- a/src/WebApp/Pages/Admin/Maintenance/Offices/Edit.cshtml
+++ b/src/WebApp/Pages/Admin/Maintenance/Offices/Edit.cshtml
@@ -10,7 +10,7 @@
 
 <h2>@Model.OriginalName</h2>
 
-<div class="p-3 border rounded-3 bg-light">
+<div class="p-3 border rounded-3 bg-light-subtle">
     <form method="post">
         <div asp-validation-summary="ModelOnly" class="alert alert-danger" role="alert"></div>
         <div class="mb-3">
