--- a/src/WebApp/Pages/Shared/_MenuPartial.cshtml
+++ b/src/WebApp/Pages/Shared/_MenuPartial.cshtml
@@ -56,25 +56,25 @@
                 <li class="nav-item dropdown">
                     <button class="btn btn-link nav-link py-2 px-0 px-lg-2 dropdown-toggle d-flex align-items-center"
                             id="bd-theme" type="button" aria-expanded="false" data-bs-toggle="dropdown" data-bs-display="static">
-                        <svg class="bi my-1 theme-icon-active" width="18" height="18"><use href="#circle-half"></use></svg>
+                        <svg class="bi my-1 theme-icon-active invert-svg-color" width="18" height="18"><use href="#circle-half"></use></svg>
                         <span class="d-lg-none ms-2">Toggle theme</span>
                     </button>
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="bd-theme" style="--bs-dropdown-min-width: 8rem;">
                         <li>
                             <button type="button" class="dropdown-item d-flex align-items-center active" data-bs-theme-value="light">
-                                <svg class="bi me-2 theme-icon" width="18" height="18"><use href="#sun-fill"></use></svg>
+                                <svg class="bi me-2 theme-icon" id="light-svg" width="18" height="18"><use href="#sun-fill"></use></svg>
                                 Light
                             </button>
                         </li>
                         <li>
                             <button type="button" class="dropdown-item d-flex align-items-center" data-bs-theme-value="dark">
-                                <svg class="bi me-2 theme-icon" width="18" height="18"><use href="#moon-stars-fill"></use></svg>
+                                <svg class="bi me-2 theme-icon" id="dark-svg" width="18" height="18"><use href="#moon-stars-fill"></use></svg>
                                 Dark
                             </button>
                         </li>
                         <li>
                             <button type="button" class="dropdown-item d-flex align-items-center" data-bs-theme-value="auto">
-                                <svg class="bi me-2 theme-icon" width="18" height="18"><use href="#circle-half"></use></svg>
+                                <svg class="bi me-2 theme-icon" id="auto-svg" width="18" height="18"><use href="#circle-half"></use></svg>
                                 Auto
                             </button>
                         </li>
