--- a/src/WebApp/Pages/Shared/_MenuPartial.cshtml
+++ b/src/WebApp/Pages/Shared/_MenuPartial.cshtml
@@ -53,12 +53,12 @@
                     </li>
                 }
                 <!-- Dropdown selector for Light Switch -->
-                <li class="nav-item dropdown">
-                    <button class="btn btn-link nav-link py-2 px-0 px-lg-2 dropdown-toggle d-flex align-items-center"
-                            id="bd-theme" type="button" aria-expanded="false" data-bs-toggle="dropdown" data-bs-display="static">
+                <li class="nav-item dropdown bs-light-text">
+                    <a class="nav-link dropdown-toggle text-white text-decoration-none" href="#" id="bd-theme" role="button"
+                       data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" title="Change Light Mode">
                         <svg class="bi my-1 theme-icon-active invert-svg-color" width="18" height="18"><use href="#circle-half"></use></svg>
-                        <span class="d-lg-none ms-2">Toggle theme</span>
-                    </button>
+                        <span class="d-lg-none ms-2 text-white">Toggle theme</span>
+                    </a>
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="bd-theme" style="--bs-dropdown-min-width: 8rem;">
                         <li>
                             <button type="button" class="dropdown-item d-flex align-items-center active" data-bs-theme-value="light">
