--- a/src/WebApp/Pages/Account/ExternalLogin.cshtml
+++ b/src/WebApp/Pages/Account/ExternalLogin.cshtml
@@ -5,12 +5,12 @@
 }
 
 <h1 class="text-danger">@ViewData["Title"]</h1>
-<p>
+<p class="lead">
     There was an error creating your account. If you need assistance related to this error,
     please contact EPD IT support.
 </p>
 
-<div asp-validation-summary="ModelOnly"></div>
+<div asp-validation-summary="All"></div>
 
 @if (Model.DisplayFailedUser is not null)
 {
