--- a/src/WebApp/Pages/Account/Unavailable.cshtml
+++ b/src/WebApp/Pages/Account/Unavailable.cshtml
@@ -5,4 +5,4 @@
 }
 
 <h1 class="text-danger">@ViewData["Title"]</h1>
-<p>This account is unavailable. Please contact support.</p>
+<p class="lead">This account is unavailable. Please contact support.</p>
