--- a/src/WebApp/Pages/Admin/Users/EditRoles.cshtml
+++ b/src/WebApp/Pages/Admin/Users/EditRoles.cshtml
@@ -22,7 +22,7 @@
 
 <div class="p-3 border rounded-3 bg-light mb-3">
     <form method="post">
-        <div asp-validation-summary="ModelOnly" class="alert alert-danger" role="alert">
+        <div asp-validation-summary="All" class="alert alert-danger" role="alert">
             Roles update failed:
         </div>
 
