Improve naming consistency

--- a/src/WebApp/Pages/Admin/Maintenance/Index.cshtml
+++ b/src/WebApp/Pages/Admin/Maintenance/Index.cshtml
@@ -11,5 +11,5 @@
 </p>
 
 <div class="list-group">
-    <a asp-page="Offices/Index" class="list-group-item list-group-item-action">@MaintenanceOption.Office.PluralName</a>
+    <a asp-page="./Offices/Index" class="list-group-item list-group-item-action">@MaintenanceOption.Office.PluralName</a>
 </div>
