--- a/src/WebApp/Pages/Admin/Users/Details.cshtml
+++ b/src/WebApp/Pages/Admin/Users/Details.cshtml
@@ -21,7 +21,7 @@
 @if (User.IsInRole(AppRole.UserAdmin))
 {
     <p>
-        <a asp-page="./Edit" asp-route-id="@Model.DisplayStaff.Id" class="btn btn-outline-primary btn-sm">Edit Profile</a>
+        <a asp-page="Edit" asp-route-id="@Model.DisplayStaff.Id" class="btn btn-outline-primary btn-sm">Edit Profile</a>
     </p>
 }
 
@@ -42,7 +42,7 @@
 @if (User.IsInRole(AppRole.UserAdmin))
 {
     <p>
-        <a asp-page="./EditRoles" asp-route-id="@Model.DisplayStaff.Id" class="btn btn-outline-primary btn-sm">Edit User Roles</a>
+        <a asp-page="EditRoles" asp-route-id="@Model.DisplayStaff.Id" class="btn btn-outline-primary btn-sm">Edit User Roles</a>
     </p>
 }
 
