--- a/src/WebApp/Pages/Admin/Users/Index.cshtml
+++ b/src/WebApp/Pages/Admin/Users/Index.cshtml
@@ -51,7 +51,7 @@
         <div class="mt-3 mb-1">
             <input type="hidden" name="handler" value="search" />
             <button id="SearchButton" type="submit" class="btn btn-primary col-sm-3 me-2">Search</button>
-            <a asp-page="./Index" class="btn btn-outline-secondary col-sm-3 col-md-2">Clear Form</a>
+            <a asp-page="Index" class="btn btn-outline-secondary col-sm-3 col-md-2">Clear Form</a>
         </div>
     </form>
 </div>
@@ -80,7 +80,7 @@
                         {
                             <span class="badge bg-secondary">YOU</span>
                         }
-                        <a asp-page="./Details" asp-route-id="@item.Id">@item.DisplayName</a>
+                        <a asp-page="Details" asp-route-id="@item.Id">@item.DisplayName</a>
                     </td>
                     <td>@item.Email</td>
                     <td>
