--- a/src/WebApp/Pages/Account/Index.cshtml
+++ b/src/WebApp/Pages/Account/Index.cshtml
@@ -22,8 +22,8 @@
 </dl>
 
 <div class="mb-3">
-    <a asp-page="./Edit" class="btn btn-outline-primary me-2">Edit Profile</a>
-    <form class="form-inline d-inline-block" asp-page="./Logout" method="post">
+    <a asp-page="Edit" class="btn btn-outline-primary me-2">Edit Profile</a>
+    <form class="form-inline d-inline-block" asp-page="Logout" method="post">
         <button type="submit" class="btn btn-danger">Sign out</button>
     </form>
 </div>
