Update Role definitions

--- a/src/WebApp/Pages/Admin/Users/Details.cshtml
+++ b/src/WebApp/Pages/Admin/Users/Details.cshtml
@@ -18,7 +18,7 @@
     @Model.DisplayStaff.DisplayName
 </h2>
 
-@if (User.IsInRole(AppRole.UserAdmin))
+@if (User.IsInRole(RoleName.UserAdmin))
 {
     <p>
         <a asp-page="Edit" asp-route-id="@Model.DisplayStaff.Id" class="btn btn-outline-primary btn-sm">Edit Profile</a>
@@ -39,7 +39,7 @@
 
 <h3>Roles</h3>
 
-@if (User.IsInRole(AppRole.UserAdmin))
+@if (User.IsInRole(RoleName.UserAdmin))
 {
     <p>
         <a asp-page="EditRoles" asp-route-id="@Model.DisplayStaff.Id" class="btn btn-outline-primary btn-sm">Edit User Roles</a>
