Implement authorization policies and handlers (#73)
* Update Role definitions
* Move validators
* Fix Mock naming
* Implement role-based authorization policies
* Remove default property value in DTO
* Implement resource-based authorization

--- a/src/WebApp/Pages/Admin/Maintenance/Offices/Index.cshtml
+++ b/src/WebApp/Pages/Admin/Maintenance/Offices/Index.cshtml
@@ -18,7 +18,7 @@
     @IndexModel.ThisOption.SingularName dropdown lists.
 </p>
 
-@if (User.IsInRole(AppRole.SiteMaintenance))
+@if (Model.IsSiteMaintainer)
 {
     <p>
         <a asp-page="Add" class="btn btn-outline-primary btn-sm">Add New</a>
@@ -27,7 +27,7 @@
 
 <p id="table-description">
     The &ldquo;@AppRole.SiteMaintenanceRole.DisplayName&rdquo; role is needed to add or edit @IndexModel.ThisOption.PluralName.
-    @if (User.IsInRole(AppRole.SiteMaintenance))
+    @if (Model.IsSiteMaintainer)
     {
         @:Select an item to edit it. Setting an item as &ldquo;inactive&rdquo; makes it unavailable for future use but does not 
         @:affect any existing use.
@@ -52,7 +52,7 @@ else
         {
             <tr class="@(item.Id == Model.HighlightId ? "list-group-item-warning" : !item.Active ? "bg-secondary bg-opacity-25" : "")">
                 <td>
-                    @if (User.IsInRole(AppRole.SiteMaintenance))
+                    @if (Model.IsSiteMaintainer)
                     {
                         <a asp-page="Edit" asp-route-id="@item.Id">
                             @Html.DisplayFor(m => item.Name, "StringOrNone")
