Remove AnchorJS from forms

--- a/src/WebApp/Pages/Admin/Maintenance/Offices/Add.cshtml
+++ b/src/WebApp/Pages/Admin/Maintenance/Offices/Add.cshtml
@@ -2,6 +2,7 @@
 @model AddModel
 @{
     ViewData["Title"] = $"Add a new {AddModel.ThisOption.SingularName}";
+    ViewData["NoAnchors"] = true;
 }
 
 <h1>@ViewData["Title"]</h1>
