--- a/src/WebApp/Pages/Admin/Maintenance/Offices/Edit.cshtml
+++ b/src/WebApp/Pages/Admin/Maintenance/Offices/Edit.cshtml
@@ -3,6 +3,7 @@
 
 @{
     ViewData["Title"] = $"Edit {EditModel.ThisOption.SingularName}";
+    ViewData["NoAnchors"] = true;
 }
 
 <h1>Edit @EditModel.ThisOption.SingularName</h1>
