--- a/src/WebApp/Pages/Admin/Users/Edit.cshtml
+++ b/src/WebApp/Pages/Admin/Users/Edit.cshtml
@@ -2,6 +2,7 @@
 @model EditModel
 @{
     ViewData["Title"] = "Edit User Profile";
+    ViewData["NoAnchors"] = true;
 }
 
 <h1>@ViewData["Title"]</h1>
