--- a/src/WebApp/Pages/Admin/Users/EditRoles.cshtml
+++ b/src/WebApp/Pages/Admin/Users/EditRoles.cshtml
@@ -2,6 +2,7 @@
 @model EditRolesModel
 @{
     ViewData["Title"] = "Edit User Roles";
+    ViewData["NoAnchors"] = true;
 }
 
 <h1>@ViewData["Title"]</h1>
