Replace deprecated Bootstrap classes

--- a/src/WebApp/Pages/Admin/Users/Details.cshtml
+++ b/src/WebApp/Pages/Admin/Users/Details.cshtml
@@ -61,7 +61,7 @@ else
         {
             <dt>@role.DisplayName</dt>
             <dd>
-                <p class="text-muted">@role.Description</p>
+                <p class="text-body-secondary">@role.Description</p>
             </dd>
         }
     </dl>
