--- a/src/WebApp/Pages/Shared/DisplayTemplates/StringOrNone.cshtml
+++ b/src/WebApp/Pages/Shared/DisplayTemplates/StringOrNone.cshtml
@@ -1,7 +1,7 @@
 ﻿@model string
 @if (string.IsNullOrEmpty(Model))
 {
-    <span class="text-muted">none</span>
+    <span class="text-body-secondary">none</span>
 }
 else
 {
