--- a/src/WebApp/Pages/Shared/_Layout.cshtml
+++ b/src/WebApp/Pages/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
     </main>
 </div>
 
-<footer class="border-top footer text-muted">
+<footer class="border-top footer text-body-secondary">
     <div class="bg-light-subtle d-print-none">
         <div class="container">
             <a href="#main-nav">↑ Return to top</a>
