--- a/src/WebApp/Pages/Admin/Maintenance/Offices/Index.cshtml
+++ b/src/WebApp/Pages/Admin/Maintenance/Offices/Index.cshtml
@@ -34,7 +34,7 @@
 
 @if (Model.Items.Count == 0)
 {
-    <em class="text-muted">None</em>
+    <em class="text-body-secondary">None</em>
 }
 else
 {
