--- a/src/WebApp/wwwroot/css/site.css
+++ b/src/WebApp/wwwroot/css/site.css
@@ -30,24 +30,15 @@ html {
 
 /* Fix color accessibility
 -------------------------------------------------- */
-a {
-    color: #0366d6;
-}
 
-.btn-primary {
+[data-bs-theme="light"] .btn-primary {
     color: #fff;
     background-color: #1b6ec2;
     border-color: #1861ac;
 }
 
-.text-warning {
+[data-bs-theme="light"] .text-warning {
     color: rgb(150, 113, 0) !important;
-}
-
-.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-    color: #fff;
-    background-color: #1b6ec2;
-    border-color: #1861ac;
 }
 
 /* Sticky footer
