Use .text-danger-emphasis for required fields
Instead of .text-danger
And also adjust color for light mode.

--- a/src/WebApp/Pages/Account/ExternalLogin.cshtml
+++ b/src/WebApp/Pages/Account/ExternalLogin.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Account Error";
 }
 
-<h1 class="text-danger">@ViewData["Title"]</h1>
+<h1 class="text-danger-emphasis">@ViewData["Title"]</h1>
 <p class="lead">
     There was an error creating your account. If you need assistance related to this error,
     please contact EPD IT support.
