--- a/src/WebApp/Pages/Account/Unavailable.cshtml
+++ b/src/WebApp/Pages/Account/Unavailable.cshtml
@@ -4,5 +4,5 @@
     ViewData["Title"] = "Account Unavailable";
 }
 
-<h1 class="text-danger">@ViewData["Title"]</h1>
+<h1 class="text-danger-emphasis">@ViewData["Title"]</h1>
 <p class="lead">This account is unavailable. Please contact support.</p>
