--- a/src/WebApp/Pages/Admin/Users/Edit.cshtml
+++ b/src/WebApp/Pages/Admin/Users/Edit.cshtml
@@ -46,7 +46,7 @@
             <button type="submit" class="btn btn-primary col-sm-3 me-2">Update Info</button>
             <a asp-page="Details" asp-route-id="@Model.UpdateStaff.Id" class="btn btn-outline-secondary col-md-2">Cancel</a>
         </div>
-        <div class="text-danger mt-3">* denotes a required field</div>
+        <div class="text-danger-emphasis mt-3">* denotes a required field</div>
     </form>
 </div>
 
