--- a/src/WebApp/Pages/Account/AccessDenied.cshtml
+++ b/src/WebApp/Pages/Account/AccessDenied.cshtml
@@ -4,5 +4,5 @@
     ViewData["Title"] = "Access Denied";
 }
 
-<h1 class="text-danger">@ViewData["Title"]</h1>
+<h1 class="text-danger-emphasis">@ViewData["Title"]</h1>
 <p class="lead">You do not have access to the requested page.</p>
