--- a/src/WebApp/Pages/Shared/_Layout.cshtml
+++ b/src/WebApp/Pages/Shared/_Layout.cshtml
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
     <partial name="_RaygunScriptsPartial" />
+    <script src="~/js/color-modes.js"></script>
 </head>
 
 <body>
@@ -62,7 +63,6 @@
     <script src="~/lib/anchor-js/anchor.min.js"></script>
 }
 <script src="~/js/site.js"></script>
-<script src="~/js/lightSwitch.js"></script>
 @await RenderSectionAsync("Scripts", false)
 </body>
 </html>
