Adjust branding colors

--- a/src/WebApp/Pages/Shared/_Layout.cshtml
+++ b/src/WebApp/Pages/Shared/_Layout.cshtml
@@ -44,7 +44,7 @@
             <a href="#main-nav">↑ Return to top</a>
         </div>
     </div>
-    <div class="bg-brand text-light">
+    <div class="text-bg-brand bg-gradient">
         <div class="container">
             &copy; @DateTime.Now.Year State of Georgia
             <span class="d-print-none">
