--- a/src/WebApp/Pages/Shared/_MenuPartial.cshtml
+++ b/src/WebApp/Pages/Shared/_MenuPartial.cshtml
@@ -13,7 +13,7 @@
         <path d="M8 12a4 4 0 1 0 0-8 4 4 0 0 0 0 8zM8 0a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 0zm0 13a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 13zm8-5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2a.5.5 0 0 1 .5.5zM3 8a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2A.5.5 0 0 1 3 8zm10.657-5.657a.5.5 0 0 1 0 .707l-1.414 1.415a.5.5 0 1 1-.707-.708l1.414-1.414a.5.5 0 0 1 .707 0zm-9.193 9.193a.5.5 0 0 1 0 .707L3.05 13.657a.5.5 0 0 1-.707-.707l1.414-1.414a.5.5 0 0 1 .707 0zm9.193 2.121a.5.5 0 0 1-.707 0l-1.414-1.414a.5.5 0 0 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .707zM4.464 4.465a.5.5 0 0 1-.707 0L2.343 3.05a.5.5 0 1 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .708z" />
     </symbol>
 </svg>
-<nav id="main-nav" class="navbar navbar-expand-sm bg-brand border-bottom shadow-sm mb-3 d-print-none">
+<nav id="main-nav" class="navbar navbar-expand-sm text-bg-brand bg-gradient border-bottom shadow-sm mb-3 d-print-none">
     <div class="container">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main-nav-content"
                 aria-controls="main-nav-content" aria-expanded="false" aria-label="Toggle navigation">
@@ -23,20 +23,20 @@
         <div class="navbar-collapse collapse d-sm-inline-flex" id="main-nav-content">
             <ul class="navbar-nav flex-grow-1 mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link text-white" asp-page="/Index">Home</a>
+                    <a class="nav-link" asp-page="/Index">Home</a>
                 </li>
             </ul>
             <ul class="navbar-nav">
                 @if (User.Identity?.IsAuthenticated ?? false)
                 {
-                    <li class="nav-item dropdown bs-light-text">
-                        <a class="nav-link dropdown-toggle text-white" href="#" id="accountDropdownMenuLink" role="button"
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="accountDropdownMenuLink" role="button"
                            data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" title="View account menu">
                             Account
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="accountDropdownMenuLink">
                             <li>
-                                <a class="dropdown-item text-dark-emphasis" asp-page="/Account/Index">Your profile</a>
+                                <a class="dropdown-item" asp-page="/Account/Index">Your profile</a>
                             </li>
                             <li>
                                 <hr class="dropdown-divider">
@@ -52,12 +52,12 @@
                 else
                 {
                     <li class="nav-item">
-                        <a class="nav-link text-white" asp-page="/Account/Login">Sign in</a>
+                        <a class="nav-link" asp-page="/Account/Login">Sign in</a>
                     </li>
                 }
                 <!-- Dropdown selector for color mode -->
-                <li class="nav-item dropdown bs-light-text">
-                    <a class="nav-link dropdown-toggle text-white text-decoration-none" href="#" id="bd-theme" role="button"
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle text-decoration-none" href="#" id="bd-theme" role="button"
                        aria-expanded="false" data-bs-toggle="dropdown" data-bs-display="static" title="Toggle theme">
                         <svg class="bi my-1 me-2 theme-icon-active">
                             <use href="#circle-half"></use>
