--- a/src/WebApp/wwwroot/css/site.css
+++ b/src/WebApp/wwwroot/css/site.css
@@ -1,19 +1,44 @@
 /* Branding colors
 -------------------------------------------------- */
-.bg-brand {
-    background-color: #671010;
+
+/* Light mode theme colors */
+.text-bg-brand {
+    background-color: #f8d7da;
+    color: #000;
 }
 
-.bg-brand a {
-    color: #ffd5d5;
-}
-
-.bg-brand a:hover, .bg-brand a:focus {
-    color: #ffb6b6;
-}
-
-.text-brand {
+.text-bg-brand a {
     color: #671010;
+}
+
+.text-bg-brand a:hover, .text-bg-brand a:focus {
+    color: #773030;
+}
+
+.text-bg-brand a:active {
+    color: #875050 ;
+}
+
+.text-bg-brand .dropdown-item:active {
+    color: #fff ;
+}
+
+/* Dark mode theme colors */
+[data-bs-theme="dark"] .text-bg-brand {
+    background-color: #671010;
+    color: #fff;
+}
+
+[data-bs-theme="dark"] .text-bg-brand a {
+    color: #fee;
+}
+
+[data-bs-theme="dark"] .text-bg-brand a:hover,
+[data-bs-theme="dark"] .text-bg-brand a:focus {
+    color: #fdd;
+}
+[data-bs-theme="dark"] .text-bg-brand a:active {
+    color: #dcc;
 }
 
 /* Adjust font sizing
