--- a/src/WebApp/Pages/Admin/Users/Details.cshtml
+++ b/src/WebApp/Pages/Admin/Users/Details.cshtml
@@ -16,7 +16,7 @@
     @Model.DisplayStaff.DisplayName
     @if (Model.DisplayStaff.Email.Equals(User.Identity?.Name))
     {
-        <a asp-page="/Account/Index"><span class="badge text-bg-info">YOU</span></a>
+        <a asp-page="/Account/Index"><span class="badge bg-info-subtle border border-info-subtle text-info-emphasis rounded-pill">You</span></a>
     }
 </h2>
 
